[project]
name = "proxy-pool"
version = "1.1.0"
description = "自动化爬虫代理池，通过爬虫和隧道代理技术自动采集和校验代理"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis>=5.0.0",
    "requests>=2.32.0",
    "aiohttp>=3.10.0",
    "asyncio",
    "pysocks>=1.7.1",
]

[project.urls]
Homepage = "https://github.com/ethanwang9/ProxyPool"
Repository = "https://github.com/ethanwang9/ProxyPool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
